styles.css
body {
  padding: 1em;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
}
scenario {
  display: block;
}
.sortable-ghost {
  opacity: 0.5;
}
step {
  display: block;
  cursor: pointer;
  margin-bottom: 6px;
}
.ng2-auto-complete {
  display: block !important;
}
samp > .ng2-auto-complete {
  margin-top: 3px;
}
.ng2-auto-complete input {
  display: block;
  width: 100%;
  border: none;
  outline: none;
  padding: 0 !important;
}

